--- a/frontend/src/pages/Home.css
+++ b/frontend/src/pages/Home.css
@@ -4,20 +4,20 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 20px;
-    padding: 20px;
+    /* gap: 20px; */
+    padding: 15px;
   }
   
   .home-section {
     width: 80%;
-    background-color: rgba(0, 0, 0, 0.8); /* Light blue with 50% opacity */
-    padding: 20px;
+    background-color: #EDCDBB; /* Light blue with 50% opacity */
+    padding: 12px;
     border-radius: 10px;
-    margin-bottom: 20px;
+    margin-bottom: 10px;
   }
   
   .home-text {
-    color:white;
+    color:#000000;
     text-align: center;
   }
   
@@ -29,8 +29,9 @@
   }
   
   .card {
-    color: white;
-    background-color: rgba(101, 58, 58, 0.866);/*rgba(129, 53, 53, 0.866)*/
+    color: rgb(0, 0, 0);
+    font-size: 18px;
+    background-color: #E3B7A0;/*rgba(129, 53, 53, 0.866)*/
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     padding: 15px;
@@ -50,6 +51,9 @@
     border-radius: 10px;
   }
   
+  .card h3{
+    color: #000000;
+  }
   .card p {
     margin-top: 10px;
   }
